criando uma nova seção

--- a/index.html
+++ b/index.html
@@ -31,3 +31,36 @@ Levo Comigo</h1>
 </body>
 
 </html>
+<section class="categoria">
+
+<h2> mais vídeos de restart </h2>
+
+<div class="categoria-videos">
+
+<a href="https://www.youtube.com/watch?v=7pwMk_-kECM&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=2">
+
+<img src= "https://img.youtube.com/vi/7pwMk_-kECM&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=2/maxresdefault.jpg" />
+
+</a>
+
+<a href="https://www.youtube.com/watch?v=QNN-vH5Ee_0&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=25">
+
+<img src= "https://img.youtube.com/vi/QNN-vH5Ee_0&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=25/maxresdefault.jpg"/>
+
+</a>
+
+</a>
+
+<a href="https://www.youtube.com/watch?v=aaR7tedkv9k&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=3">
+
+<img src= "https://img.youtube.com/vi/aaR7tedkv9k&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=3/maxresdefault.jpg"/>
+
+</a>
+
+<a href="https://www.youtube.com/watch?v=e0Qx7V4Ab6I&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=13">
+
+<img src= "https://img.youtube.com/vi/e0Qx7V4Ab6I&list=PLCyv7bipjhHW_wmH1gkK_XSdLgz3-FtIz&index=13/maxresdefault.jpg" />
+
+</a>
+
+</div>
